# AI_MENTOR_FINAL_PROJECT

./: README.md
tpnew/: Aqueries.py  LManagement.py  Ldata.json  cert_requests.db  database.py  documents.db  email_handler.py  feedback.json  hello.py  index.html  main.py  pyproject.toml  styles.css
