[project]
name = "tpnew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.1.13",
    "exa-py>=1.9.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "groq>=0.20.0",
    "phidata>=2.7.10",
    "rapidfuzz>=3.12.2",
    "reportlab>=4.3.1",
]
